<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_price"
        android:textColor="#fbfbfb"
        android:textSize="20sp" />
    
    <TextView
        android:id="@+id/textView0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selected_meal" />
    
    <Spinner 
        android:id="@+id/meal_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/meal_prompt"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price" />

    <EditText
        android:id="@+id/update_price_field"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:numeric="decimal"
        android:maxLength="4" />

    <Button
        android:id="@+id/update_button"
        android:layout_width="120sp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginBottom="0dip"
        android:text="@string/update" />

</LinearLayout>