<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:stretchColumns="1" >

    <TextView
        android:id="@+id/textView0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_meal_main"
        android:textColor="#fbfbfb"
        android:textSize="20sp" />

    <TableRow>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/main_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:inputType="text"
            android:prompt="@string/main_prompt"/>
    </TableRow>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#313131"
        android:gravity="center_vertical"
        android:paddingBottom="2dp"
        android:paddingTop="10dp" >

        <Button
            android:id="@+id/edit_main_button"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/change" />

        <Button
            android:id="@+id/delete_button"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/delete" />
    </LinearLayout>

</TableLayout>