<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget54"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1" >

        <TextView
            android:id="@+id/textView0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_meal_type"
            android:textColor="#fbfbfb"
            android:textSize="20sp" />

        <TableRow>

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/type_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:inputType="text"
                android:maxLength="20"
                android:textSize="20sp" />
            
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/onion"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/onion_field"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789"
                android:gravity="right"
                android:hint="@string/default_grams"
                android:inputType="phone"
                android:maxLength="3" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/green_pepper"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/green_pepper_field"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789"
                android:gravity="right"
                android:hint="@string/default_grams"
                android:inputType="phone"
                android:maxLength="3" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mushroom"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/mushroom_field"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789"
                android:gravity="right"
                android:hint="@string/default_grams"
                android:inputType="phone"
                android:maxLength="3" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/beansprouts"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/beansprouts_field"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789"
                android:gravity="right"
                android:hint="@string/default_grams"
                android:inputType="phone"
                android:maxLength="3" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pineapple"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/pineapple_field"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789"
                android:gravity="right"
                android:hint="@string/default_grams"
                android:inputType="phone"
                android:maxLength="3" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ginger"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/ginger_field"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789"
                android:gravity="right"
                android:hint="@string/default_grams"
                android:inputType="phone"
                android:maxLength="3" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/spring_onion"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/spring_onion_field"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789"
                android:gravity="right"
                android:hint="@string/default_grams"
                android:inputType="phone"
                android:maxLength="3" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/babycorn"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/babycorn_field"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789"
                android:gravity="right"
                android:hint="@string/default_grams"
                android:inputType="phone"
                android:maxLength="3" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bamboo_shoot"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/bamboo_shoot_field"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789"
                android:gravity="right"
                android:hint="@string/default_grams"
                android:inputType="phone"
                android:maxLength="3" />
        </TableRow>
        
         <TableRow>

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tomato"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/tomato_field"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789"
                android:gravity="right"
                android:hint="@string/default_grams"
                android:inputType="phone"
                android:maxLength="3" />
        </TableRow>
        
          <TableRow>

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cashew_nuts"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/cashew_nuts_field"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789"
                android:gravity="right"
                android:hint="@string/default_grams"
                android:inputType="phone"
                android:maxLength="3" />
        </TableRow>

        <Button
            android:id="@+id/edit_type_button"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/change" />
    </TableLayout>

</ScrollView>