<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/textView0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/base_price"
        android:textSize="20sp"
        android:textColor="#fbfbfb" /> 
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price" />

    <EditText
        android:id="@+id/edit_field"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:maxLength="5" />
    
    <Button
        android:id="@+id/change_button"
        android:layout_width="120sp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginBottom="0dip"
        android:text="@string/change" />

</LinearLayout>