<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:baselineAligned="false"
    android:orientation="vertical" >
    
    <View
        android:layout_width="fill_parent"
        android:layout_height="5dp"
        android:background="#000000" />

    <TextView
        android:id="@+id/left_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/view_trend"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:textStyle="bold" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="5dp"
        android:background="#000000" />

    <Button
        android:id="@+id/meal_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/top_meals" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="5dp"
        android:background="#000000" />

    <Button
        android:id="@+id/main_type_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/top_main_type" />
    
    <ListView
        android:id="@+id/list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:visibility="gone" />
    
    
    <TextView
        android:id="@+id/result_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginLeft="5dp"
        android:textColor="#FFFFFF"
        android:textSize="25sp" />
</LinearLayout>